# llm.cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  draft.md
apps/: benchmark_attention.cpp  compare_backends.cpp  gradient_check.cpp
benchmarks/: backend_benchmark.csv  benchmark_inference.cpp  benchmark_layernorm.cpp  benchmark_matmul.cpp  compare_backends.cpp
examples/: infer_gpt2.cpp  train_gpt2.cpp
include/gpt2lab/autograd/: backward.hpp  graph.hpp  tape.hpp
include/gpt2lab/backends/: backend.hpp  cpu_et.hpp  cpu_naive.hpp  cublas_backend.hpp  cuda_backend.hpp  cudnn_backend.hpp  eigen_backend.hpp
include/gpt2lab/bench/: benchmark.hpp  metrics.hpp  report.hpp
include/gpt2lab/core/: device.hpp  dtype.hpp  error.hpp  shape.hpp  tensor.hpp
include/gpt2lab/model/: embeddings.hpp  gpt2.hpp  gpt2_config.hpp  init.hpp  lm_head.hpp  mha.hpp  mlp.hpp  transformer_block.hpp
include/gpt2lab/ops/: add.hpp  gelu.hpp  layernorm.hpp  matmul.hpp  ops.hpp  softmax.hpp
include/gpt2lab/runtime/: allocator.hpp  logger.hpp  memory_stats.hpp  profiler.hpp  reproducibility.hpp  timer.hpp
scripts/: export_weights.py
src/autograd/: backward.cpp  graph.cpp  tape.cpp
src/backends/: cpu_et.cpp  cpu_naive.cpp  cublas_backend.cu  cuda_backend.cu  cudnn_backend.cu  eigen_backend.cpp
src/bench/: benchmark.cpp  metrics.cpp  report.cpp
src/core/: device.cpp  dtype.cpp  error.cpp  shape.cpp  tensor.cpp
src/model/: embeddings.cpp  gpt2.cpp  init.cpp  lm_head.cpp  mha.cpp  mlp.cpp  transformer_block.cpp
src/ops/: add.cpp  gelu.cpp  layernorm.cpp  matmul.cpp  ops.cpp  softmax.cpp
src/runtime/: allocator.cpp  logger.cpp  memory_stats.cpp  profiler.cpp  reproducibility.cpp  timer.cpp
tests/integration/: test_gpt2_forward.cpp
tests/tools/: dump_tensor.cpp
tests/unit/: test_autograd.cpp  test_cuda.cpp  test_matmul.cpp  test_shape.cpp  test_tensor.cpp
